Fixes in service layer.